# bonobo

./: .README.md.swp  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  build.gradle  format.sh  pom.xml  run_vm.sh  travis.sh
bonobo/: .gitignore  CMakeLists.txt  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
bonobo/example/: analyzer.dart  compiler.dart  main.bnb  parser.dart  scanner.dart
bonobo/lib/: bonobo.dart
bonobo/lib/analysis/: analysis.dart  analyzer.dart  byte.dart  context.dart  control_flow.dart  enum_type.dart  expression_analyzer.dart  function.dart  function_analyzer.dart  function_type.dart  module.dart  module_system.dart  num.dart  object.dart  runtime.dart  scope.dart  statement_analyzer.dart  string.dart  struct_type.dart  tuple.dart  type.dart  type_analyzer.dart  typedef.dart  usage.dart
bonobo/lib/ast/: ast.dart  ast_node.dart  compilation_unit.dart  expression.dart  function.dart  recursive_visitor.dart  statement.dart  type.dart  type_declaration.dart  unit.dart  visitor.dart
bonobo/lib/bvm/: bvm.dart
bonobo/lib/bvm/src/: .gitignore  CMakeLists.txt
bonobo/lib/bvm/src/binary/: CMakeLists.txt  Constant.h  Function.h  Object.h  Opcode.h  Type.h  parse_binary.cc  parse_binary.h
bonobo/lib/bvm/src/bvm/: CMakeLists.txt  OldVM.cc  OldVM.h  VM.cc  VM.cpp  VM.h  bvm.h  bvm_task.cc  bvm_task.h  channel.cc  channel.h  executable.cc  executable.h  function.h  interpreter.cc  interpreter.h  main.cc  opcode.h  register.h  section.h  trampoline.h  value.h
bonobo/lib/bvm/src/bvm_dart/: CMakeLists.txt  bvm_dart.dart  bvm_dart.h  bvm_dart_dllmain_win.cc  dart_channel.cc  dart_channel.h  extension.cc  extension.h
bonobo/lib/bvm/src/jit/: BVM.cc  BVM.h  BVMInterpreter.cc  BVMInterpreter.h  BVMTask.h  CMakeLists.txt  JIT.cc  JIT.h  bvm_jit.dart  bvm_task.h  extension.cc  extension.h
bonobo/lib/bvm/test/jit/: CMakeLists.txt  ReturnInt.cc
bonobo/lib/commands/: bonobo_command.dart  commands.dart  compile.dart  compiler.dart  document.dart  explore.dart  file_system.dart  format.dart  info.dart  language_server.dart  run.dart  util.dart
bonobo/lib/compiler/: architecture.dart  asm.dart  base_compiler.dart  bvm_compiler.dart  c_compiler.dart  compiler.dart  low_level_compiler.dart
bonobo/lib/compiler/bvm/: bvm.dart  constant.dart  function.dart  object.dart  opcode.dart  type.dart
bonobo/lib/compiler/ll/: compilation_unit.dart  expression.dart  ll.dart  ll.g.dart  ll.serializer.g.dart  statement.dart  type.dart
bonobo/lib/compiler/ssa/: block.dart  bytecode_generator.dart  compiler.dart  dominance.dart  instruction.dart  procedure.dart  program.dart  register.dart  ssa.dart
bonobo/lib/error/: error.dart
bonobo/lib/frontend/: frontend.dart
bonobo/lib/frontend/parser/: parser.dart
bonobo/lib/frontend/parser/parselet/: infix.dart  prefix.dart
bonobo/lib/frontend/scanner/: scanner.dart  token.dart
bonobo/lib/ir/: expression.dart  ir.dart  ir.g.dart  ir.serializer.g.dart  misc.dart  module.dart  statement.dart  type.dart
bonobo/lib/langserver/: langServer.dart
bonobo/lib/language_server/: language_server.dart
bonobo/lib/parser/: base.dart  expression.dart  expression.dart.old  function.dart  parser.dart  type.dart  type_decl.dart  typedef.dart
bonobo/lib/parser/expression/: infix.dart  prefix.dart
bonobo/lib/parser/statement/: statement.dart  var_decl.dart  variable_declaration.dart
bonobo/lib/refractor/: refractor.dart
bonobo/lib/runtime/include/: bonobo.h  stdint.h
bonobo/lib/scanner/: scanner.dart  token.dart
bonobo/lib/src/analysis/: analysis.dart  analyzer.dart  byte.dart  context.dart  control_flow.dart  function.dart  function_type.dart  module.dart  module_system.dart  num.dart  object.dart  runtime.dart  scope.dart  string.dart  tuple.dart  type.dart  typedef.dart  usage.dart
bonobo/lib/src/ast/: ast.dart  ast_node.dart  compilation_unit.dart  expression.dart  function.dart  statement.dart  type.dart  visitor.dart
bonobo/lib/src/commands/: bonobo_command.dart  commands.dart  compile.dart  compiler.dart  document.dart  explore.dart  file_system.dart  format.dart  language_server.dart  util.dart
bonobo/lib/src/commands/format/: replace.dart
bonobo/lib/src/text/: _parser.dart  error.dart  parselet.dart  parser.dart  scanner.dart  text.dart  token.dart
bonobo/lib/src/text/parselet/: infix.dart  prefix.dart  type.dart
bonobo/lib/util/: binary_sink.dart  util.dart
bonobo/runtime/: bonobo.h  error.c  error.h  num.h  string.c  string.h
bonobo/test/parser/: comment_test.dart  util.dart
bonobo/test/parser/expression/: call_test.dart  identifier_test.dart  member_test.dart  range_test.dart  tuple_test.dart
bonobo/test/parser/fn/: expression_body_test.dart  single_line.dart
bonobo/test/parser/statement/: variable_declaration_test.dart
bonobo/test/parser/type/: enum_type_test.dart  named_type_test.dart  struct_type_test.dart  tuple_type_test.dart  typedef_test.dart  util.dart
bonobo/test/scanner/: scanner_test.dart  util.dart
bonobo/tool/: deploy.dart
example/: .gitignore  CMakeLists.txt  README.md  bad_style.bnb  class.bnb  configure  fibonacci.bnb  for.bnb  functions.bnb  hello.bnb  index.bnb  interface.bnb  math.bnb  tuple.bnb  tuples.bnb  type_inference.bnb  variables.bnb  while.bnb
example/bad_style/: main.bnb
example/byte/: main.bnb
example/classes/: data_class.bnb  main.bnb  simple.bnb
example/comments/: main.bnb
example/conditional/: if.bnb  if_let.bnb
example/documentation/: main.bnb
example/enum/: main.bnb
example/functions/: main.bnb
example/hello/: main.bnb
example/loop/: for.bnb  iterable.bnb  map.bnb  range.bnb  while.bnb
example/math/: main.bnb  simple.bnb
example/modules/: main.bnb  pygmy.bnbi
example/modules/foo/: foo.bnb
example/struct/: struct_type.bnb
example/tuples/: main.bnb
example/type_inference/: main.bnb
example/typedefs/: main.bnb
example/types/: data_class.bnb  main.bnb  simple.bnb  tuples.bnb
example/variables/: main.bnb
(+177 files in other folders)
